<resources>
    <string name="app_name">WorkoutList</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="type">Workout Type </string>
    <string name="duration">Duration (min)</string>
    <string name="completed">Done</string>
    <string name="create">Create</string>
    <string name="date_required">Date Required</string>
    <string name="add_new_item">Add new item</string>
    <string name="label_completed_items">Completed items</string>
    <string name="label_not_completed_items">Not completed items</string>

    <string-array name="category_items">
        <item>Running</item>
        <item>Weightlifting</item>
        <item>Swimming</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_workout_items">Workout Items</string>
    <string name="remove_item">Remove item</string>
    <string name="running">Running</string>
    <string name="not_completed">Not completed</string>
    <string name="date">Date</string>
    <string name="edit_item">Edit item</string>
    <string name="duration_required">Duration required</string>
    <string name="duration_invalid">Duration invalid</string>
</resources>